Se hizo el split de datos

--- a/Reto.ipynb
+++ b/Reto.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "56edee93",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "90c8d19a",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "76822a25",
    "metadata": {},
    "outputs": [
@@ -211,6 +211,114 @@
     "    print(f\"Total images in dataset: {len(image_files)}\")\n",
     "else:\n",
     "    print(\"No images found in the images folder.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb14e5a2",
+   "metadata": {},
+   "source": [
+    "## Separates the data into different folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "03b6ad2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating train/test split...\n",
+      "Created directories: data_set/split/train and data_set/split/test\n",
+      "\n",
+      "Total files in images folder: 20\n",
+      "Image files found: 20\n",
+      "\n",
+      "Copying 16 images to train folder...\n",
+      "Copying 4 images to test folder...\n",
+      "\n",
+      "✓ Data split completed successfully!\n",
+      "  - Training images: 16 (80.0%)\n",
+      "  - Testing images: 4 (20.0%)\n",
+      "  - Total images: 20\n",
+      "\n",
+      "Final split verification:\n",
+      "  - Train folder: 16 images\n",
+      "  - Test folder: 4 images\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split the dataset into train and test directories\n",
+    "# Split ratio: 80% training, 20% testing\n",
+    "\n",
+    "original_images_path = os.path.join(dataset_path, 'images')\n",
+    "split_base_path = os.path.join(dataset_path, 'split')\n",
+    "\n",
+    "# Check if split already exists\n",
+    "if os.path.exists(split_base_path):\n",
+    "    print(f\"✓ Split directory already exists at: {split_base_path}\")\n",
+    "    print(\"Skipping data split creation.\")\n",
+    "else:\n",
+    "    print(\"Creating train/test split...\")\n",
+    "    \n",
+    "    # Create main train and test directories\n",
+    "    train_path = os.path.join(split_base_path, 'train')\n",
+    "    test_path = os.path.join(split_base_path, 'test')\n",
+    "    os.makedirs(train_path, exist_ok=True)\n",
+    "    os.makedirs(test_path, exist_ok=True)\n",
+    "    \n",
+    "    print(f\"Created directories: {train_path} and {test_path}\")\n",
+    "    \n",
+    "    # Get all image files (case-insensitive)\n",
+    "    all_files = os.listdir(original_images_path)\n",
+    "    image_files = [f for f in all_files \n",
+    "                   if f.lower().endswith(('.jpg', '.png', '.jpeg', '.bmp', '.tiff', '.tif', '.gif'))]\n",
+    "    \n",
+    "    # Debug: show all files and filtered images\n",
+    "    print(f\"\\nTotal files in images folder: {len(all_files)}\")\n",
+    "    print(f\"Image files found: {len(image_files)}\")\n",
+    "    if len(all_files) != len(image_files):\n",
+    "        non_images = [f for f in all_files if f not in image_files]\n",
+    "        print(f\"Non-image files skipped: {non_images}\")\n",
+    "    \n",
+    "    # Shuffle images for random split\n",
+    "    random.seed(42)\n",
+    "    random.shuffle(image_files)\n",
+    "    \n",
+    "    # Calculate split index\n",
+    "    split_idx = int(len(image_files) * 0.8)\n",
+    "    train_files = image_files[:split_idx]\n",
+    "    test_files = image_files[split_idx:]\n",
+    "    \n",
+    "    # Copy files to train directory\n",
+    "    print(f\"\\nCopying {len(train_files)} images to train folder...\")\n",
+    "    for img_file in train_files:\n",
+    "        src = os.path.join(original_images_path, img_file)\n",
+    "        dst = os.path.join(train_path, img_file)\n",
+    "        shutil.copy2(src, dst)\n",
+    "    \n",
+    "    # Copy files to test directory\n",
+    "    print(f\"Copying {len(test_files)} images to test folder...\")\n",
+    "    for img_file in test_files:\n",
+    "        src = os.path.join(original_images_path, img_file)\n",
+    "        dst = os.path.join(test_path, img_file)\n",
+    "        shutil.copy2(src, dst)\n",
+    "    \n",
+    "    print(f\"\\n✓ Data split completed successfully!\")\n",
+    "    print(f\"  - Training images: {len(train_files)} ({len(train_files)/len(image_files)*100:.1f}%)\")\n",
+    "    print(f\"  - Testing images: {len(test_files)} ({len(test_files)/len(image_files)*100:.1f}%)\")\n",
+    "    print(f\"  - Total images: {len(image_files)}\")\n",
+    "\n",
+    "# Verify the split\n",
+    "train_count = len(os.listdir(os.path.join(split_base_path, 'train')))\n",
+    "test_count = len(os.listdir(os.path.join(split_base_path, 'test')))\n",
+    "print(f\"\\nFinal split verification:\")\n",
+    "print(f\"  - Train folder: {train_count} images\")\n",
+    "print(f\"  - Test folder: {test_count} images\")"
    ]
   }
  ],
