--- a/Reto.ipynb
+++ b/Reto.ipynb
@@ -11,10 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "56edee93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/paul_araque/Desktop/Carrera/Septimo Semestre/Segundo Periodo/Reto/Reto_BloqueIA/env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -34,7 +43,7 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "from torch import optim, nn, utils, Tensor\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
     "from torch.utils.data.dataset import random_split\n",
     "from torchvision.datasets import ImageFolder\n",
     "\n",
@@ -53,7 +62,9 @@
     "from lightning.pytorch.loggers import CSVLogger\n",
     "\n",
     "import kagglehub\n",
-    "from kagglehub import KaggleDatasetAdapter"
+    "from kagglehub import KaggleDatasetAdapter\n",
+    "\n",
+    "from typing import Callable, Optional, List, Dict"
    ]
   },
   {
@@ -67,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "90c8d19a",
    "metadata": {},
    "outputs": [
@@ -81,6 +92,29 @@
       "data_set/\n",
       "  annotations.xml\n",
       "  receipts.csv\n",
+      "  split/\n",
+      "    test/\n",
+      "      8.jpg\n",
+      "      15.jpg\n",
+      "      13.jpg\n",
+      "      11.jpg\n",
+      "    train/\n",
+      "      9.jpg\n",
+      "      14.jpg\n",
+      "      17.jpg\n",
+      "      16.jpg\n",
+      "      12.jpg\n",
+      "      10.jpg\n",
+      "      18.jpg\n",
+      "      19.jpg\n",
+      "      4.jpg\n",
+      "      5.jpg\n",
+      "      7.jpg\n",
+      "      6.JPG\n",
+      "      2.jpg\n",
+      "      3.jpg\n",
+      "      1.jpg\n",
+      "      0.jpg\n",
       "  images/\n",
       "    8.jpg\n",
       "    9.jpg\n",
@@ -167,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "76822a25",
    "metadata": {},
    "outputs": [
@@ -223,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "03b6ad2b",
    "metadata": {},
    "outputs": [
@@ -231,19 +265,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating train/test split...\n",
-      "Created directories: data_set/split/train and data_set/split/test\n",
-      "\n",
-      "Total files in images folder: 20\n",
-      "Image files found: 20\n",
-      "\n",
-      "Copying 16 images to train folder...\n",
-      "Copying 4 images to test folder...\n",
-      "\n",
-      "✓ Data split completed successfully!\n",
-      "  - Training images: 16 (80.0%)\n",
-      "  - Testing images: 4 (20.0%)\n",
-      "  - Total images: 20\n",
+      "✓ Split directory already exists at: data_set/split\n",
+      "Skipping data split creation.\n",
       "\n",
       "Final split verification:\n",
       "  - Train folder: 16 images\n",
@@ -319,6 +342,241 @@
     "print(f\"\\nFinal split verification:\")\n",
     "print(f\"  - Train folder: {train_count} images\")\n",
     "print(f\"  - Test folder: {test_count} images\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36bece53",
+   "metadata": {},
+   "source": [
+    "# Model Definition with PyTorch Lightning\n",
+    "---\n",
+    "\n",
+    "Define the model architecture and data module for receipt image processing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9306f26b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TicketDataset(Dataset):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        original_dir: str,\n",
+    "        boxes_dir: str,\n",
+    "        transform: Optional[Callable] = None,\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        original_dir: folder with original ticket images\n",
+    "        boxes_dir   : folder with images where boxes are drawn\n",
+    "        transform   : torchvision transforms applied to both images\n",
+    "        \"\"\"\n",
+    "        self.original_dir = original_dir\n",
+    "        self.boxes_dir = boxes_dir\n",
+    "        self.transform = transform\n",
+    "\n",
+    "        # Match files by base name, without extension\n",
+    "        # e.g., 0.jpg in original matches 0.png in boxes\n",
+    "        image_extensions = {'.jpg', '.jpeg', '.png', '.bmp', '.tiff', '.tif'}\n",
+    "        \n",
+    "        # Build dictionaries: basename -> full filename\n",
+    "        orig_files = {}\n",
+    "        for f in os.listdir(original_dir):\n",
+    "            base, ext = os.path.splitext(f)\n",
+    "            if ext.lower() in image_extensions:\n",
+    "                orig_files[base] = f\n",
+    "        \n",
+    "        box_files = {}\n",
+    "        for f in os.listdir(boxes_dir):\n",
+    "            base, ext = os.path.splitext(f)\n",
+    "            if ext.lower() in image_extensions:\n",
+    "                box_files[base] = f\n",
+    "        \n",
+    "        # Find matching base names\n",
+    "        matching_bases = sorted(list(set(orig_files.keys()) & set(box_files.keys())))\n",
+    "        \n",
+    "        if len(matching_bases) == 0:\n",
+    "            raise ValueError(\"No matching files between original and boxes dirs!\")\n",
+    "        \n",
+    "        # Store pairs: (original_filename, boxes_filename)\n",
+    "        self.file_pairs = [(orig_files[base], box_files[base]) for base in matching_bases]\n",
+    "\n",
+    "        print(f\"[TicketDataset] Found {len(self.file_pairs)} paired images.\")\n",
+    "\n",
+    "        # Default transform if none is given\n",
+    "        if self.transform is None:\n",
+    "            self.transform = transforms.Compose([\n",
+    "                transforms.Resize((512, 512)),\n",
+    "                transforms.ToTensor(),\n",
+    "            ])\n",
+    "\n",
+    "    def __len__(self) -> int:\n",
+    "        return len(self.file_pairs)\n",
+    "\n",
+    "    def _load_image(self, path: str) -> Image.Image:\n",
+    "        return Image.open(path).convert(\"RGB\")\n",
+    "\n",
+    "    def __getitem__(self, idx: int) -> Dict[str, torch.Tensor]:\n",
+    "        orig_filename, box_filename = self.file_pairs[idx]\n",
+    "\n",
+    "        orig_path = os.path.join(self.original_dir, orig_filename)\n",
+    "        box_path  = os.path.join(self.boxes_dir, box_filename)\n",
+    "\n",
+    "        orig_img = self._load_image(orig_path)\n",
+    "        box_img  = self._load_image(box_path)\n",
+    "\n",
+    "        # Same transform to both\n",
+    "        orig_img = self.transform(orig_img)\n",
+    "        box_img  = self.transform(box_img)\n",
+    "\n",
+    "        sample = {\n",
+    "            \"image\": orig_img, # original ticket\n",
+    "            \"boxed_image\": box_img, # ticket with boxes drawn\n",
+    "            \"filename\": orig_filename, # return original filename\n",
+    "        }\n",
+    "        return sample\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f27c212f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TicketDataModule(L.LightningDataModule):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        original_dir: str,\n",
+    "        boxes_dir: str,\n",
+    "        batch_size: int = 4,\n",
+    "        num_workers: int = 0,\n",
+    "        train_transform: Optional[Callable] = None,\n",
+    "        test_transform: Optional[Callable] = None,\n",
+    "        val_split: float = 0.2,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.original_dir = original_dir\n",
+    "        self.boxes_dir = boxes_dir\n",
+    "        self.batch_size = batch_size\n",
+    "        self.num_workers = num_workers\n",
+    "        self.train_transform = train_transform\n",
+    "        self.test_transform = test_transform\n",
+    "        self.val_split = val_split\n",
+    "\n",
+    "        self.train_dataset = None\n",
+    "        self.val_dataset = None\n",
+    "        self.test_dataset = None\n",
+    "\n",
+    "    def setup(self, stage: str = None):\n",
+    "        # Full dataset, we'll split for train/val\n",
+    "        full_dataset = TicketDataset(\n",
+    "            original_dir=self.original_dir,\n",
+    "            boxes_dir=self.boxes_dir,\n",
+    "            transform=self.train_transform,\n",
+    "        )\n",
+    "\n",
+    "        n_total = len(full_dataset)\n",
+    "        n_val = max(1, int(n_total * self.val_split)) # at least 1\n",
+    "        n_train = n_total - n_val\n",
+    "\n",
+    "        self.train_dataset, self.val_dataset = random_split(\n",
+    "            full_dataset,\n",
+    "            [n_train, n_val],\n",
+    "            generator=torch.Generator().manual_seed(42) # reproducible\n",
+    "        )\n",
+    "\n",
+    "        # Reuse the validation split as test (Ask Octavio how the train/test split should we)\n",
+    "        if self.test_transform is not None:\n",
+    "            self.test_dataset = TicketDataset(\n",
+    "                original_dir=self.original_dir,\n",
+    "                boxes_dir=self.boxes_dir,\n",
+    "                transform=self.test_transform,\n",
+    "            )\n",
+    "        else:\n",
+    "            # Use same as full_dataset, no special test transform\n",
+    "            self.test_dataset = full_dataset\n",
+    "\n",
+    "        print(f\"[TicketDataModule] Train: {n_train}, Val: {n_val}, Total: {n_total}\")\n",
+    "\n",
+    "    def train_dataloader(self):\n",
+    "        return DataLoader(\n",
+    "            dataset=self.train_dataset,\n",
+    "            batch_size=self.batch_size,\n",
+    "            shuffle=True,\n",
+    "            num_workers=self.num_workers,\n",
+    "        )\n",
+    "\n",
+    "    def val_dataloader(self):\n",
+    "        return DataLoader(\n",
+    "            dataset=self.val_dataset,\n",
+    "            batch_size=self.batch_size,\n",
+    "            shuffle=False,\n",
+    "            num_workers=self.num_workers,\n",
+    "        )\n",
+    "\n",
+    "    def test_dataloader(self):\n",
+    "        return DataLoader(\n",
+    "            dataset=self.test_dataset,\n",
+    "            batch_size=self.batch_size,\n",
+    "            shuffle=False,\n",
+    "            num_workers=self.num_workers,\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1b15cc46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[TicketDataset] Found 20 paired images.\n",
+      "[TicketDataset] Found 20 paired images.\n",
+      "[TicketDataModule] Train: 16, Val: 4, Total: 20\n",
+      "torch.Size([4, 3, 512, 512]) torch.Size([4, 3, 512, 512]) ['11.jpg', '19.jpg', '0.jpg', '1.jpg']\n",
+      "torch.Size([4, 3, 512, 512]) torch.Size([4, 3, 512, 512]) ['11.jpg', '19.jpg', '0.jpg', '1.jpg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define train/test transforms\n",
+    "train_transform = transforms.Compose([\n",
+    "    transforms.Resize((512, 512)),\n",
+    "    transforms.ToTensor(),\n",
+    "])\n",
+    "\n",
+    "test_transform = transforms.Compose([\n",
+    "    transforms.Resize((512, 512)),\n",
+    "    transforms.ToTensor(),\n",
+    "])\n",
+    "\n",
+    "original_dir = \"data_set/images\"\n",
+    "boxes_dir = \"data_set/boxes\"\n",
+    "\n",
+    "tickets_dm = TicketDataModule(\n",
+    "    original_dir=original_dir,\n",
+    "    boxes_dir=boxes_dir,\n",
+    "    batch_size=4,\n",
+    "    num_workers=0,\n",
+    "    train_transform=train_transform,\n",
+    "    test_transform=test_transform,\n",
+    "    val_split=0.2,\n",
+    ")\n",
+    "\n",
+    "tickets_dm.setup()\n",
+    "\n",
+    "train_loader = tickets_dm.train_dataloader()\n",
+    "val_loader = tickets_dm.val_dataloader()\n",
+    "\n",
+    "batch = next(iter(train_loader))\n",
+    "print(batch[\"image\"].shape, batch[\"boxed_image\"].shape, batch[\"filename\"])\n"
    ]
   }
  ],
