Un cambio al de donut de metricas

--- a/Donut_Training.ipynb
+++ b/Donut_Training.ipynb
@@ -10,10 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "530c1cc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gabrieledid/Desktop/Tec/Reto_BloqueIA/env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n",
+      "No GPU available, using CPU\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -1527,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "abfea4d8",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1735,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/56/xqr136z53495n4kdx_0px1j80000gn/T/ipykernel_79241/486736844.py:64: UserWarning: Glyph 128202 (\\N{BAR CHART}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/56/xqr136z53495n4kdx_0px1j80000gn/T/ipykernel_5730/486736844.py:64: UserWarning: Glyph 128202 (\\N{BAR CHART}) missing from font(s) DejaVu Sans.\n",
       "  plt.tight_layout()\n",
       "/Users/gabrieledid/Desktop/Tec/Reto_BloqueIA/env/lib/python3.12/site-packages/IPython/core/pylabtools.py:170: UserWarning: Glyph 128202 (\\N{BAR CHART}) missing from font(s) DejaVu Sans.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n"
@@ -1815,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ef006d47",
    "metadata": {},
    "outputs": [
@@ -1826,10 +1843,78 @@
       "\n",
       "================================================================================\n",
       "🏆 TABLA COMPARATIVA FINAL\n",
-      "================================================================================\n",
-      "Estrategia  Épocas Mejor Val Loss Mejor Val Acc Final Train Loss Final Val Loss\n",
-      "    Frozen      28         2.8175        0.3695              N/A            N/A\n",
-      "   Partial     324         0.9490        0.0806           0.3391            N/A\n",
+      "================================================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estrategia</th>\n",
+       "      <th>Épocas</th>\n",
+       "      <th>Mejor Val Loss</th>\n",
+       "      <th>Mejor Val Acc</th>\n",
+       "      <th>Final Train Loss</th>\n",
+       "      <th>Final Val Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Frozen</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.8175</td>\n",
+       "      <td>0.3695</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Partial</td>\n",
+       "      <td>324</td>\n",
+       "      <td>0.9490</td>\n",
+       "      <td>0.0806</td>\n",
+       "      <td>0.3391</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Estrategia  Épocas  Mejor Val Loss  Mejor Val Acc  Final Train Loss  \\\n",
+       "0     Frozen      28          2.8175         0.3695               NaN   \n",
+       "1    Partial     324          0.9490         0.0806            0.3391   \n",
+       "\n",
+       "   Final Val Loss  \n",
+       "0             NaN  \n",
+       "1             NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "================================================================================\n"
      ]
     }
@@ -1858,12 +1943,14 @@
     "\n",
     "comparison_df = pd.DataFrame(comparison_data)\n",
     "\n",
-    "# Formatear números\n",
-    "for col in ['Mejor Val Loss', 'Mejor Val Acc', 'Final Train Loss', 'Final Val Loss']:\n",
-    "    if col in comparison_df.columns:\n",
-    "        comparison_df[col] = comparison_df[col].apply(lambda x: f\"{x:.4f}\" if pd.notna(x) else \"N/A\")\n",
+    "# Configurar formato de pandas para mejor visualización\n",
+    "pd.set_option('display.float_format', lambda x: f'{x:.4f}')\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.width', None)\n",
     "\n",
-    "print(comparison_df.to_string(index=False))\n",
+    "# Mostrar tabla con pandas\n",
+    "display(comparison_df)\n",
+    "\n",
     "print(\"=\"*80)"
    ]
   }
@@ -1876,7 +1963,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.4"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
